fixed chat padding on mobile

--- a/src/Chat/node/public/css/chat.css
+++ b/src/Chat/node/public/css/chat.css
@@ -211,7 +211,7 @@ span.srchat_pseudo_element {
     }
 
     #messages {
-        padding-top: 40px;
+        padding-bottom: 60px;
     }
 
 }
